1.2.0
* version bumps: hirb, awesome_print, coderay, g, methodfinder, method_source
* remove RVM helpers: Sorry, were too buggy...
* fix/improve 'cd' helper method
* more little tweaks

1.1.1
* fix the Ripl.after_rc bug

1.1.0
* fix hirb loading/unicode issue + colorize tables (thanks to halan)
* colorize paged wirb output
* include method locator gem (improved ancestors)
* include looksee gem (aliased as Object#l/Object#ll and Object#edit)
* include method source gem (Object#src)
* small tweaks...

1.0.6
* add possibility to modify library callbacks without removing the library by using: replace_library_callback or add_library_callback
* fix hirb dependency issue
* readme improvements

1.0.5
* use paint gem for terminal colors

1.0.4
* improve error-handling
* fix broken loading of boson + interactive_editor

1.0.3
* fix post-install banner typo

1.0.2
* version bumps for zucker (rbx compatible) and wirb (improved generic object-description highlighting)

1.0.1
* add missing require 'rbconfig'

1.0.0
* gemify general helpers/rvm stuff ("every_day_irb", "rvm_loader")
* 6 different loading schemas: start, thread, autoload, sub_session, late, late_thread
  * load almost every feature via threads
* don't use zucker/alias_for, autload zucker/env (except zucker/os) for performance reasons
* add irbtools/minimal mode for starting Irbtools without the default set of libraries
* replace RV and RE with rv and re

0.8.8
* fix 0.8.7 file permissions
* add methodfinder gem
* don't depend on guessmethod anymore

0.8.7
* fix railsrc loading
* add ori gem for nice Object#ri calling
* minor tweaks

0.8.6
* windows support
* update hirb + activate unicode-drawn tables

0.8.5
* rails related fixes

0.8.4
* now using wirb instead of wirble

0.8.3
* improved/added rvm methods (use, gemset, rubies, gemsets)
  * RVM (Ruby API) constant gets autoloaded
* improved cd command
* don't load guessmethod by default (it's cool, but not always suited for production)
* more small changes

0.8.2